--- a/config/user/pages/fun.yml
+++ b/config/user/pages/fun.yml
@@ -6,19 +6,19 @@ categories:
     icon: fas fa-face-smile
     sites:
       - name: 自由钢琴
-        icon: fab fa-piano-keyboard
+        icon: fas fa-piano-keyboard
         description: 在线弹钢琴
         url: "https://www.autopiano.cn"
       - name: 世界的声音
-        icon: fab fa-ear-listen
+        icon: fas fa-ear-listen
         description: 听不同语言怎么说
         url: "https://www.localingual.com"
       - name: 网站博物馆
-        icon: fab fa-timeline
+        icon: fas fa-timeline
         description: 互联网的记忆
         url: "https://www.webdesignmuseum.org"
       - name: 世界名画博物馆
-        icon: fab fa-landmark
+        icon: fas fa-landmark
         description: 欣赏一下艺术
         url: "https://gallerix.asia"
 
