--- a/config/user/pages/tool.yml
+++ b/config/user/pages/tool.yml
@@ -6,23 +6,23 @@ categories:
     icon: fas fa-robot
     sites:
       - name: DeepSeek
-        icon: fab fa-deepseek
+        icon: fas fa-comments
         description: 深度求索旗下的智能AI
         url: "hhttps://chat.deepseek.com"
       - name: ChatGPT
-        icon: fab fa-chatgpt
+        icon: fas fa-comments
         description: OpenAI旗下的智能AI
         url: "https://chatgpt.com"
       - name: Gemini
-        icon: fab fa-gemini
+        icon: fas fa-comments
         description: Google旗下的智能AI
         url: "https://gemini.google.com"
       - name: Grok
-        icon: fab fa-grok
+        icon: fas fa-comments
         description: Twitter旗下的智能AI
         url: "https://x.ai"
       - name: Claude
-        icon: fab fa-claude
+        icon: fas fa-comments
         description: 任务自动化智能AI
         url: "https://claude.ai"
   - name: 网络测试
@@ -48,7 +48,7 @@ categories:
         icon: fas fa-globe
         description: 测试网络是否支持IPV6
         url: "https://test-ipv6.com"
-  - name: 效率
+  - name: 提升效率
     icon: fas fa-screwdriver-wrench
     sites:
       - name: Time.is
@@ -64,7 +64,7 @@ categories:
         description: 文件格式在线转换
         url: "https://www.alltoall.net"
       - name: 文本比较
-        icon: fas fa-file
+        icon: fas fa-file-lines
         description: 对比两个文本的差异
         url: "https://charactercalculator.com/zh-cn/text-compare"
       - name: 在线工具
